[gd_scene load_steps=9 format=3 uid="uid://cp7od6851etuw"]

[ext_resource type="Script" uid="uid://cprp4sjgjx05m" path="res://Scripts/UI/shopitemUI.gd" id="1_emgyl"]
[ext_resource type="Theme" uid="uid://drd1dois6agfp" path="res://UI/game.theme" id="2_ewtaa"]
[ext_resource type="Texture2D" uid="uid://d16qhldk4uhvu" path="res://UI/resources/cw_item_slot.png" id="2_sb7i5"]
[ext_resource type="Texture2D" uid="uid://nnn5juuro7la" path="res://Sprites/Items/Item_Axe.tres" id="3_6bce6"]
[ext_resource type="Texture2D" uid="uid://c7k8ykgl4mw7n" path="res://UI/resources/coin.png" id="4_emgyl"]
[ext_resource type="FontFile" uid="uid://ly7qvmrvyw1h" path="res://UI/OLDSH___.TTF" id="4_sb7i5"]

[sub_resource type="LabelSettings" id="LabelSettings_6bce6"]
font = ExtResource("4_sb7i5")
font_size = 26
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_sb7i5"]
font = ExtResource("4_sb7i5")
font_size = 24
font_color = Color(0.8666667, 0.7529412, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-1, 1)

[node name="ShopItemUI" type="BaseButton"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 2
auto_translate_mode = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(360, 70)
layout_direction = 0
layout_mode = 3
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 360.0
offset_bottom = 70.0
grow_horizontal = 1
grow_vertical = 1
rotation = 0.0
scale = Vector2(1, 1)
pivot_offset = Vector2(0, 0)
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
localize_numeral_system = true
tooltip_text = ""
tooltip_auto_translate_mode = 0
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 2
focus_behavior_recursive = 0
mouse_filter = 0
mouse_behavior_recursive = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
accessibility_name = ""
accessibility_description = ""
accessibility_live = 0
accessibility_controls_nodes = Array[NodePath]([])
accessibility_described_by_nodes = Array[NodePath]([])
accessibility_labeled_by_nodes = Array[NodePath]([])
accessibility_flow_to_nodes = Array[NodePath]([])
theme = null
theme_type_variation = &""
disabled = false
toggle_mode = false
button_pressed = false
action_mode = 1
button_mask = 1
keep_pressed_outside = false
button_group = null
shortcut = null
shortcut_feedback = true
shortcut_in_tooltip = true
script = ExtResource("1_emgyl")
metadata/_custom_type_script = "uid://preagipnf07a"

[node name="BG" type="Panel" parent="."]
custom_minimum_size = Vector2(360, 70)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_ewtaa")

[node name="ItemBG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -65.0
offset_right = 70.0
offset_bottom = 65.0
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_sb7i5")
expand_mode = 5
stretch_mode = 5

[node name="ItemIcon" type="TextureRect" parent="ItemBG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.16100001
anchor_top = 0.125
anchor_right = 0.83400005
anchor_bottom = 0.873
offset_left = 0.72999954
offset_top = 21.75
offset_right = -0.05300522
offset_bottom = -20.490005
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_6bce6")
stretch_mode = 5

[node name="ItemName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 81.0
offset_top = -1.0
offset_right = -28.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
text = "Item Name
"
label_settings = SubResource("LabelSettings_6bce6")

[node name="GoldText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 118.0
offset_top = 32.0
offset_right = -201.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
text = "100
"
label_settings = SubResource("LabelSettings_sb7i5")

[node name="GoldIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.177
anchor_bottom = 1.0
offset_left = 82.0
offset_top = -44.0
offset_right = 44.28
offset_bottom = 74.25
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_emgyl")
expand_mode = 5
stretch_mode = 5
